# CineRankML

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push.yml
apps/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: auth.ts  client.ts  movies.ts  ratings.ts  recommendations.ts
apps/frontend/src/components/: AuthCard.tsx  EmptyState.tsx  GenreChips.tsx  LoadingState.tsx  ModelDetailsDrawer.tsx  MovieCard.tsx  MovieSearchBox.tsx  Navbar.tsx  PosterImage.tsx  ProfileStatus.tsx  RecommendationCard.tsx  StarRating.tsx  UserRatingsCarousel.tsx
apps/frontend/src/hooks/: useAuth.tsx  useMovieSearch.ts  useRecommendations.ts  useUserRatings.ts
apps/frontend/src/pages/: AppPage.tsx  LoginPage.tsx
apps/frontend/src/types/: api.ts
apps/frontend/src/utils/: poster.ts
apps/recommender-api/: pyproject.toml
apps/recommender-api/src/recommender_api/: app.py  dependencies.py  main.py  runtime.py  schemas.py  settings.py
apps/recommender-api/src/recommender_api/routes/: auth.py  movies.py  ratings.py  recommend.py
apps/recommender-api/src/recommender_api/services/: auth.py  experiment_feedback.py  feature_builder.py  inference.py  model_loader.py  rating_publisher.py
apps/recommender-api/tests/: test_auth_service.py  test_exclude_movie_ids.py  test_feature_builder.py  test_ratings_api.py  test_recommend_api.py
docs/: poster_safety.md  project_plan.md
infra/docker/apps/: Dockerfile
infra/docker/frontend/: Dockerfile  Dockerfile.dev  nginx.conf
infra/docker/jobs/: Dockerfile
infra/docker/migrate/: Dockerfile
infra/docker/services/: Dockerfile
infra/docker/workers/: Dockerfile
infra/grafana/dashboards/: catalog-enrichment.json  kafka-ingestion.json  online-recommendations.json  opensearch-sync.json  postgres-health.json  service-health.json  snapshot-export.json
infra/grafana/dashboards/ml-pipeline/: create-features.json  prepare-cf-dataset.json  train-cf.json  train-hybrid-ranker.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/grafana/provisioning/datasources/: datasource.yml
infra/postgres-exporter/: queries.yml
infra/prometheus/: prometheus.yml
jobs/create_features/: pyproject.toml
jobs/create_features/src/create_features/: main.py  manifest.py  prep.py  version.py
jobs/create_features/tests/: test_prep_streaming.py  test_split_part_buffer.py
jobs/evaluate_model/: pyproject.toml
jobs/evaluate_model/src/evaluate_model/: evaluate.py  main.py  manifest.py  ranking.py  regression.py
jobs/evaluate_model/tests/: test_ranking.py  test_regression.py
jobs/opensearch_sync/: pyproject.toml
jobs/opensearch_sync/src/opensearch_sync/: __init__.py  main.py  syncer.py
jobs/prepare_cf_dataset/: pyproject.toml
jobs/prepare_cf_dataset/src/prepare_cf_dataset/: main.py  manifest.py  prep.py
jobs/seed_catalog/: pyproject.toml
jobs/seed_catalog/src/seed_catalog/: loader.py  main.py
jobs/snapshot_to_s3/: pyproject.toml
jobs/snapshot_to_s3/src/snapshot_to_s3/: exporter.py  main.py  manifest.py
jobs/tmdb_enrichment/: pyproject.toml
jobs/tmdb_enrichment/src/tmdb_enrichment/: enricher.py  main.py
jobs/tmdb_enrichment/tests/: test_enricher.py
jobs/train_cf/: pyproject.toml
jobs/train_cf/src/train_cf/: dataset.py  device.py  evaluate.py  export.py  main.py  manifest.py  model.py  plot.py  train.py  version.py
jobs/train_cf/tests/: test_dataset.py  test_evaluate.py  test_model.py
jobs/train_hybrid_ranker/: pyproject.toml
jobs/train_hybrid_ranker/scripts/: retest_training_perf.py
jobs/train_hybrid_ranker/src/train_hybrid_ranker/: dataset.py  device.py  evaluate.py  main.py  model.py  plot.py  train.py  version.py
jobs/train_hybrid_ranker/tests/: test_dataset.py  test_evaluate.py  test_model.py
scripts/: check_poster_safety.py  pyproject.toml
scripts/tests/: test_check_poster_safety.py
services/embedder-api/: pyproject.toml
services/embedder-api/src/embedder_api/: __init__.py  app.py  main.py  model.py  schemas.py
workers/ratings-consumer/: pyproject.toml
workers/ratings-consumer/src/ratings_consumer/: handler.py  main.py
workers/ratings-consumer/tests/: test_handler.py
workers/ratings-producer/: pyproject.toml
workers/ratings-producer/src/ratings_producer/: main.py
workers/tags-consumer/: pyproject.toml
workers/tags-consumer/src/tags_consumer/: handler.py  main.py
workers/tags-producer/: pyproject.toml
workers/tags-producer/src/tags_producer/: main.py
