[project]
name = "cinerankml"
version = "0.1.0"
description = "Production-style movie recommender MLE platform"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/common",
    "workers/ratings-producer",
    "workers/tags-producer",
    "workers/ratings-consumer",
    "workers/tags-consumer",
    "jobs/seed_catalog",
    "jobs/tmdb_enrichment",
    "jobs/opensearch_sync",
    "jobs/snapshot_to_s3",
    "jobs/prepare_cf_dataset",
    "services/embedder-api",
]
