[project]
name = "poster-safety"
version = "0.1.0"
description = "Offline poster safety checker for CineRankML"
requires-python = ">=3.12"
dependencies = [
    "common",
    "openai",
]

[project.scripts]
check-poster-safety = "check_poster_safety:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../packages/common/src"]
