[project]
name = "recommender-api"
version = "0.1.0"
description = "Online movie recommendation FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "common",
    "train-hybrid-ranker",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "bcrypt>=4.0",
    "torch>=2.5",
]

[project.scripts]
recommender-api = "recommender_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommender_api"]

[tool.uv.sources]
common = { workspace = true }
train-hybrid-ranker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/common/src", "../../jobs/train_hybrid_ranker/src"]
