[project]
name = "evaluate-model"
version = "0.1.0"
description = "Evaluate hybrid ranker on test split with regression and ranking metrics"
requires-python = ">=3.12"
dependencies = [
    "common",
    "train-hybrid-ranker",
    "torch>=2.5",
    "pyarrow>=18.0",
]

[project.scripts]
evaluate-model = "evaluate_model.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluate_model"]

[tool.uv.sources]
common = { workspace = true }
train-hybrid-ranker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
