[project]
name = "opensearch-sync"
version = "0.1.0"
description = "Sync dirty catalog movies from Postgres to OpenSearch"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.scripts]
opensearch-sync = "opensearch_sync.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensearch_sync"]

[tool.uv.sources]
common = { workspace = true }
