[project]
name = "seed-catalog"
version = "0.1.0"
description = "Load MovieLens movies.csv and links.csv into catalog_movies"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.scripts]
seed-catalog = "seed_catalog.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seed_catalog"]

[tool.uv.sources]
common = { workspace = true }
