[project]
name = "snapshot-to-s3"
version = "0.1.0"
description = "Export Postgres tables to MinIO as partitioned Parquet snapshots"
requires-python = ">=3.12"
dependencies = [
    "common",
    "pyarrow>=18.0",
]

[project.scripts]
snapshot-to-s3 = "snapshot_to_s3.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snapshot_to_s3"]

[tool.uv.sources]
common = { workspace = true }
