[project]
name = "tmdb-enrichment"
version = "0.1.0"
description = "Enrich catalog_movies with TMDB metadata"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.scripts]
tmdb-enrichment = "tmdb_enrichment.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmdb_enrichment"]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
