[project]
name = "train-cf"
version = "0.1.0"
description = "Train dot-product collaborative filtering model and export movie embeddings"
requires-python = ">=3.12"
dependencies = [
    "common",
    "torch>=2.5",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "matplotlib>=3.9",
]

[project.scripts]
train-cf = "train_cf.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/train_cf"]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
