[project]
name = "train-hybrid-ranker"
version = "0.1.0"
description = "Train MLP hybrid ranker on Phase 8 feature datasets"
requires-python = ">=3.12"
dependencies = [
    "common",
    "torch>=2.5",
    "pyarrow>=18.0",
    "matplotlib>=3.9",
]

[project.scripts]
train-hybrid-ranker = "train_hybrid_ranker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/train_hybrid_ranker"]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
