[project]
name = "embedder-api"
version = "0.1.0"
description = "Content embedding API using MiniLM-L6-v2"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[project.scripts]
embedder-api = "embedder_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedder_api"]

[tool.uv.sources]
common = { workspace = true }
