[project]
name = "ratings-consumer"
version = "0.1.0"
description = "Kafka ratings consumer writing to Postgres"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.scripts]
ratings-consumer = "ratings_consumer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ratings_consumer"]

[tool.uv.sources]
common = { workspace = true }
