[project]
name = "ratings-producer"
version = "0.1.0"
description = "Simulated MovieLens ratings CSV to Kafka producer"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.scripts]
ratings-producer = "ratings_producer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ratings_producer"]

[tool.uv.sources]
common = { workspace = true }
