[project]
name = "tags-consumer"
version = "0.1.0"
description = "Kafka tags consumer writing to Postgres"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.scripts]
tags-consumer = "tags_consumer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tags_consumer"]

[tool.uv.sources]
common = { workspace = true }
