[project]
name = "tags-producer"
version = "0.1.0"
description = "Simulated MovieLens tags CSV to Kafka producer"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.scripts]
tags-producer = "tags_producer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tags_producer"]

[tool.uv.sources]
common = { workspace = true }
